@@ -1,3 +1,7 @@
+2014-04-05 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* index.php: added News - sdcc 3.4.0 RC3
+
 2014-04-01 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* index.php: added dedication to Borut Razem
